@@ -31,5 +31,7 @@ namespace Mono.Cecil {
 	public interface IGenericInstance : IMetadataTokenProvider {
 
 		GenericArgumentCollection GenericArguments { get; }
+
+		bool HasGenericArguments { get; }
 	}
 }
